--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,50 +1,14 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - pandasnd
+name: Deploy PHP app to Heroku - hangocmy portfolio
 
 on:
   push:
     branches:
       - "**"
+
   workflow_dispatch:
 
 jobs:
-  cypress:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Create .env file
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_URL: ${{ secrets.URL }}
-          envkey_PORT: ${{ secrets.PORT }}
-          envkey_DB_CONNECTION: ${{ secrets.DB_CONNECTION }}
-          envkey_ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
-          envkey_CLOUD_NAME: ${{ secrets.CLOUD_NAME }}
-          envkey_API_KEY: ${{ secrets.API_KEY }}
-          envkey_API_SECRET: ${{ secrets.API_SECRET }}
-          envkey_LOGIN_CYPRESS: ${{ secrets.LOGIN_CYPRESS }}
-          envkey_USER_ADMIN_CYPRESS: ${{ secrets.USER_ADMIN_CYPRESS }}
-          envkey_PASS_ADMIN_CYPRESS: ${{ secrets.PASS_ADMIN_CYPRESS }}
-          envkey_USER_CUSTOMER_CYPRESS: ${{ secrets.USER_CUSTOMER_CYPRESS }}
-          envkey_PASS_CUSTOMER_CYPRESS: ${{ secrets.PASS_CUSTOMER_CYPRESS }}
-          envkey_PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          envkey_ADMIN_LOGIN_URL: ${{ secrets.ADMIN_LOGIN_URL}}
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
-        with:
-          start: npm start
-          browser: chrome
-          headed: true
-          wait-on: ${{ secrets.URL }}
-          wait-on-timeout: 120
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   build:
     runs-on: ubuntu-latest
@@ -52,41 +16,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
+      - name: Setup PHP Action
+        uses: shivammathur/setup-php@2.21.2
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: "Production"
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
+      - name: Development Code
+        uses: actions/checkout@v2
 
-      - name: "Deploy to Azure Web App"
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+      - name: Setup PHP Action
+        uses: shivammathur/setup-php@2.21.2
+
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          app-name: "pandasnd"
-          slot-name: "Production"
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C9745F52C2FD4E3B94E579DEEC705808 }}
-          package: .
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: 'hangocmy'
+          heroku_email: 'hangocmy00@gmail.com'
