--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy PHP app to Heroku - hangocmy portfolio
+name: Deploy PHP app to Heroku
 
 on:
   push:
@@ -21,5 +21,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: 'hangocmy'
-          heroku_email: 'hangocmy00@gmail.com'
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
