--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
-  "dependencies": {
+  "name": "test",
+  "version": "1.0.0",
+  "description": "Automation testing with Cypress framework",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "cypress": "^10.7.0",
     "cypress-xpath": "^2.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.2"
   }
 }
