--- a/.github/workflows/deploy_hangocmy.yml
+++ b/.github/workflows/deploy_hangocmy.yml
@@ -25,14 +25,14 @@ jobs:
         with:
           node-version: "14.x"
 
-      - name: npm install, build, and test
+      - name: Install dependencies
         run: |
           npm install
-          npm run test
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
+          cy:run: npm run cy:run 
           browser: chrome
           wait-on: ${{ secrets.URL }}
           wait-on-timeout: 120
