--- a/.github/workflows/deploy_hangocmy.yml
+++ b/.github/workflows/deploy_hangocmy.yml
@@ -20,6 +20,9 @@ jobs:
           browser: chrome
           wait-on-timeout: 120
           record: true
+        env:
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   deploy:
     runs-on: ubuntu-latest
