--- a/.github/workflows/deploy_hangocmy.yml
+++ b/.github/workflows/deploy_hangocmy.yml
@@ -27,6 +27,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: cypress
+    environment:
+      name: "Production"
+      url: ${{ secrets.HEROKU_PRODUCTION_URL }}
+
     steps:
       - name: Development Code
         uses: actions/checkout@v2
@@ -37,6 +41,7 @@ jobs:
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
+          slot-name: "Production"
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
